# Basic-Interpreter-2024

./: Basic-Demo-64bit  CMakeLists.txt
Basic/: Basic.cpp  exp.cpp  exp.hpp  parser.cpp  program.cpp  program.hpp  statement.cpp  statement.hpp
Basic/Utils/: strlib.cpp  strlib.hpp  tokenScanner.cpp  tokenScanner.hpp
Bonus/Calculator/lib/: antlr4-runtime_4.13.1_amd64.deb
Test/: trace02.txt
